<resources>
    <string name="app_name">Banco-alcala</string>
    <string name="introduce_la_contrase_a">Introduce la contraseña</string>
    <string name="obligatorio">Obligatorio</string>
    <string name="entrar">Entrar</string>
    <string name="salir">Salir</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="introduce_el_usuario">Introduce el usuario</string>
</resources>