<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="39dp">

        <TextView
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/iniciar_sesion"
            android:textSize="20dp"
            app:layout_constraintBottom_toTopOf="@id/dni"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dni"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="88dp"
            android:layout_marginEnd="16dp"
            android:textSize="20dp"
            android:hint="@string/introduce_el_usuario"
            app:layout_constraintEnd_toEndOf="@id/text"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/text"
            app:layout_constraintTop_toTopOf="@id/text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/obligatorio"
            app:layout_constraintTop_toBottomOf="@id/dni"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="16dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints">

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="88dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/introduce_la_contrase_a"
            android:inputType="textPassword"
            android:textSize="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dni" />

        <TextView
            android:id="@+id/textObligatorio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:text="@string/obligatorio"
            app:layout_constraintStart_toStartOf="@id/password"
            app:layout_constraintTop_toBottomOf="@id/password" />

        <Button
            android:id="@+id/button_login"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="88dp"
            android:layout_marginEnd="-40dp"
            android:text="@string/entrar"
            app:layout_constraintEnd_toStartOf="@id/exit_login"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textObligatorio" />

        <Button
            android:id="@+id/exit_login"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="88dp"
            android:layout_marginEnd="16dp"
            android:text="@string/salir"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@id/button_login"
            app:layout_constraintTop_toBottomOf="@id/textObligatorio" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_toggle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:textSize="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>